# cwm-mcp-demo

./: .env.example  .gitignore  README.md  mcp_http_bridge.py  requirements.txt
.cursor/: mcp.json
.cursor/skills/cwm-mop-workflow-from-cli-sample/: SKILL.md  reference.md
docs/: cwm-mop-workflow-from-cli-sample-prompts-and-process.md
examples/: cursor-mcp.json
scripts/: post_workflow_from_file.py  run_job_from_input.py
workflow-apps/: README.md  pyproject.toml
workflow-apps/cwm_workflow_apps/: __init__.py  cwm_client.py  server.py  status_ui.py
